name:                semantic-reflex-example
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            Examples for the semantic-reflex library
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  resources/styling.css

library
  hs-source-dirs: src

  exposed-modules:
    Example
  other-modules:
      Example.StateEnum
    , Example.CountryEnum
    , Example.QQ
    , Example.Common
    , Example.Section.Buttons
    , Example.Section.Checkbox
    , Example.Section.Dimmer
    , Example.Section.Divider
    , Example.Section.Dropdown
    , Example.Section.Flag
    , Example.Section.Header
    , Example.Section.Icon
    , Example.Section.Input
    , Example.Section.Label
    , Example.Section.List
    , Example.Section.Menu
    , Example.Section.Message
    , Example.Section.Progress
    , Example.Section.RadioGroup
    , Example.Section.Transition

  build-depends:
      base            >= 4.8 && < 4.10
    , bytestring
    , containers
    , data-default
    , file-embed      >= 0.0.10 && < 0.1
    --, ghcjs-dom
    , jsaddle         >= 0.8.0.0 && < 0.10
    , lens            >= 4.15.2
    , mtl
    , reflex-dom
    , reflex-dom-core >= 0.4 && < 0.5
    , reflex-dom-nested-routing
    , random
    , semantic-reflex
    , transformers
    , text

    -- For example code generation
    , ghc-prim
    , haskell-src-exts
    , haskell-src-meta
    , hscolour
    , template-haskell

  if impl(ghcjs)
    build-depends: ghcjs-base
    cpp-options: -DGHCJS_GC_INTERVAL=60000

  ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults

  default-language:    Haskell2010

executable semantic-reflex-example
  main-is: Main.hs
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends:
      base >= 4.8 && < 4.10
    , file-embed >= 0.0.10 && < 0.1
    , semantic-reflex-example
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  if !impl(ghcjs)
    build-depends: jsaddle-warp
  if impl(ghcjs)
    build-depends: reflex-dom
    ghc-options: -dedupe
    cpp-options: -DGHCJS_GC_INTERVAL=60000

