name:                semantic-reflex
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            Semantic UI components for Reflex Dom
description:         This package provides a Reflex wrapper around the
                     Semantic UI components.
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:
  data/static/semantic.min.css
  data/static/themes/default/assets/fonts/icons.eot
  data/static/themes/default/assets/fonts/icons.otf
  data/static/themes/default/assets/fonts/icons.svg
  data/static/themes/default/assets/fonts/icons.ttf
  data/static/themes/default/assets/fonts/icons.woff
  data/static/themes/default/assets/fonts/icons.woff2
  data/static/themes/default/assets/images/flags.png
  data/static/index.html

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Active
    Reflex.Dom.SemanticUI
    Reflex.Dom.SemanticUI.Button
    Reflex.Dom.SemanticUI.Checkbox
    Reflex.Dom.SemanticUI.Common
    Reflex.Dom.SemanticUI.Container
    Reflex.Dom.SemanticUI.Dimmer
    Reflex.Dom.SemanticUI.Divider
    Reflex.Dom.SemanticUI.Dropdown
    Reflex.Dom.SemanticUI.Field
    Reflex.Dom.SemanticUI.Form
    Reflex.Dom.SemanticUI.Header
    Reflex.Dom.SemanticUI.Icon
    Reflex.Dom.SemanticUI.Image
    Reflex.Dom.SemanticUI.Input
    Reflex.Dom.SemanticUI.Label
    Reflex.Dom.SemanticUI.List
    Reflex.Dom.SemanticUI.Menu
    Reflex.Dom.SemanticUI.Message
    Reflex.Dom.SemanticUI.Paragraph
    Reflex.Dom.SemanticUI.Progress
    Reflex.Dom.SemanticUI.RadioGroup
    Reflex.Dom.SemanticUI.Rail
    Reflex.Dom.SemanticUI.Segment
    Reflex.Dom.SemanticUI.Sticky
    Reflex.Dom.SemanticUI.Table
    Reflex.Dom.SemanticUI.Transition
  if !impl(ghcjs)
    exposed-modules: Reflex.Dom.SemanticUI.Warp

  default-extensions:
      FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables

  build-depends:
      base              >= 4.8 && < 4.10
    , bytestring
    , containers
    -- >= 0.5.9
    , data-default
    , dependent-map
    , file-embed        >= 0.0.10 && < 0.1
    , ghcjs-dom
    , jsaddle           >= 0.8.0.0 && < 0.10
    , lens              >= 4.15.2 && < 4.16
    , mtl
    , reflex            >= 0.5 && < 0.6
    , reflex-dom-core   >= 0.4 && < 0.5
    , ref-tf
    , template-haskell
    , text
    , transformers
    , th-abstraction
    , these
    , time
    , unbounded-delays

  if !impl(ghcjs)
    build-depends:
        jsaddle-warp    >= 0.9.2.0 && < 0.10
      , wai
      , wai-app-static
      , warp
      , websockets

  ghc-options: -Wall
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000 -DGHCJS_BROWSER

  default-language:    Haskell2010

-- This is disabled due to https://github.com/reflex-frp/reflex-platform/issues/91
--  js-sources:
--      lib/semantic.min.js
--    , lib/jquery-3.2.1.min.js

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends:
      base
    , semantic-reflex

benchmark bench
  main-is: Main.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base, semantic-reflex, criterion, deepseq, reflex, text
  ghc-options: -threaded -Wall -O2
  if impl(ghcjs)
    ghc-options: -dedupe

source-repository head
  type: git
  location: https://github.com/tomsmalley/semantic-reflex
