name:                semantic-reflex
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            Semantic UI components for Reflex-DOM
description:         This package provides a Reflex reimplementation of Semantic
                     UI components.
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:
  data/static/semantic.min.css
  data/static/themes/default/assets/fonts/icons.eot
  data/static/themes/default/assets/fonts/icons.otf
  data/static/themes/default/assets/fonts/icons.svg
  data/static/themes/default/assets/fonts/icons.ttf
  data/static/themes/default/assets/fonts/icons.woff
  data/static/themes/default/assets/fonts/icons.woff2
  data/static/themes/default/assets/images/flags.png
  data/static/index.html

flag DumpSplices
  description: enable template haskell (for dumping splices)
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Active
    Reflex.Dom.SemanticUI
    Reflex.Dom.SemanticUI.Button
    Reflex.Dom.SemanticUI.Checkbox
    Reflex.Dom.SemanticUI.Common
    Reflex.Dom.SemanticUI.Container
    Reflex.Dom.SemanticUI.Dimmer
    Reflex.Dom.SemanticUI.Divider
    Reflex.Dom.SemanticUI.Dropdown
    Reflex.Dom.SemanticUI.Field
    Reflex.Dom.SemanticUI.Flag
    Reflex.Dom.SemanticUI.Form
    Reflex.Dom.SemanticUI.Header
    Reflex.Dom.SemanticUI.Icon
    Reflex.Dom.SemanticUI.Image
    Reflex.Dom.SemanticUI.Input
    Reflex.Dom.SemanticUI.Label
    Reflex.Dom.SemanticUI.List
    Reflex.Dom.SemanticUI.Menu
    Reflex.Dom.SemanticUI.Message
    Reflex.Dom.SemanticUI.Paragraph
    Reflex.Dom.SemanticUI.Progress
    Reflex.Dom.SemanticUI.RadioGroup
    Reflex.Dom.SemanticUI.Rail
    Reflex.Dom.SemanticUI.Segment
    Reflex.Dom.SemanticUI.Sticky
    Reflex.Dom.SemanticUI.Table
    Reflex.Dom.SemanticUI.Transition

  default-extensions:
      CPP
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables

  build-depends:
      base              >= 4.8 && < 4.11
    , bytestring
    , containers
    -- >= 0.5.9
    , data-default
    , dependent-map
    , file-embed        >= 0.0.10 && < 0.1
    , ghcjs-dom
    , jsaddle           >= 0.8.0.0 && < 0.10
    , lens              >= 4.15.2 && < 4.16
    , mtl
    , random
    , reflex            >= 0.5 && < 0.6
    , reflex-dom-core   >= 0.4 && < 0.5
    , ref-tf
    , template-haskell
    , text
    , transformers
    , th-abstraction
    , these
    , time
    , unbounded-delays

  ghc-options: -Wall
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000 -DGHCJS_BROWSER

  -- Dump all TH splices as valid haskell (without module prefixes) directly
  -- into this directory. For example, src/Reflex/Dom/SemanticUI/Button.hs splices
  -- will be dumped to src/Reflex/Dom/SemanticUI/Button.th.hs
  if flag(DumpSplices)
    default-extensions: TemplateHaskell
    ghc-options: -dth-dec-file -ddump-to-file -dsuppress-module-prefixes -no-link -O0 -j4 -dumpdir .
    cpp-options: -DUSE_TEMPLATE_HASKELL

  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: CommonSpec
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends:
      base
    , containers
    , semantic-reflex

    , jsaddle
    , time

    , hspec
    , QuickCheck
    , quickcheck-instances
  default-extensions: LambdaCase, OverloadedStrings, ScopedTypeVariables

benchmark bench
  main-is: Main.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base, semantic-reflex, criterion, deepseq, reflex, text
  ghc-options: -threaded -Wall -O2
  if impl(ghcjs)
    ghc-options: -dedupe

source-repository head
  type: git
  location: https://github.com/tomsmalley/semantic-reflex
